Move to Java 17: wip