@@ -1,7 +1,7 @@
 plugins {
     id 'java-library-distribution'
     id 'io.freefair.lombok'
-    id 'me.julb.gradleplugins.java11'
+    id 'me.julb.gradleplugins.java17'
     id 'me.julb.gradleplugins.additionaljars'
     id 'org.springframework.boot'
     id 'com.github.johnrengelman.processes'
@@ -20,10 +20,6 @@ dependencies {
     testImplementation project(':spring-boot-starters:spring-boot-starter-test')
 }
 
-lombok {
-    config['lombok.log.fieldName'] = 'LOGGER'
-}
-
 jar {
     manifest {
         attributes(
@@ -34,7 +30,7 @@ jar {
 
 test {
     useJUnitPlatform()
-    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
+    jvmArgs = ["-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
 }
 
 springBoot {
@@ -51,7 +47,7 @@ bootBuildImage {
     
     // Environment.
     environment = [
-        "BP_JVM_VERSION" : "11.*"
+        "BP_JVM_VERSION" : "17.*"
     ]
         /*
         BP_IMAGE_LABELS:
@@ -63,7 +59,7 @@ bootBuildImage {
         */
     
     // Docker creds.
-    docker {
+    /*docker {
         builderRegistry {
             username = System.getProperty('docker.builderRegistry.username')
             password = System.getProperty('docker.builderRegistry.password')
@@ -75,11 +71,10 @@ bootBuildImage {
             password = System.getProperty('docker.publishRegistry.password')
             url = System.getProperty('docker.publishRegistry.url', 'docker.io')
         }
-    }
+    }*/
 }
 
 bootJar {
     classifier = 'boot'
     mainClass = 'me.julb.Application'
-    layered()
 }
