@@ -1,7 +1,7 @@
 plugins {
     id 'java-library-distribution'
     id 'io.freefair.lombok'
-    id 'me.julb.gradleplugins.java11'
+    id 'me.julb.gradleplugins.java17'
     id 'me.julb.gradleplugins.additionaljars'
     id 'org.springframework.boot'
     id 'com.github.johnrengelman.processes'
@@ -19,16 +19,17 @@ dependencies {
     implementation project(':spring-boot-starters:spring-boot-starter-web')
     implementation project(':spring-boot-starters:spring-boot-starter-persistence-mongodb')
     implementation 'org.apache.commons:commons-lang3'
+    implementation 'org.mapstruct:mapstruct'
+    
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.0.Beta1'
 	
     testImplementation project(':spring-boot-starters:spring-boot-starter-test')
     testImplementation project(':spring-boot-starters:spring-boot-starter-persistence-mongodb-test')
     testImplementation project(':spring-boot-starters:spring-boot-starter-messaging-test')
-    testImplementation 'net.javacrumbs.json-unit:json-unit'
+    testImplementation 'org.hamcrest:hamcrest'
 }
 
-lombok {
-    config['lombok.log.fieldName'] = 'LOGGER'
-}
+
 
 jar {
     manifest {
@@ -40,7 +41,7 @@ jar {
 
 test {
     useJUnitPlatform()
-    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
+    jvmArgs = ["-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
 }
 
 springBoot {
@@ -52,12 +53,11 @@ openApi {
 }
 
 bootBuildImage {
-    environment = ["BP_JVM_VERSION" : "11.*"]
+    environment = ["BP_JVM_VERSION" : "17.*"]
     imageName = "${System.getProperty('docker.namespace')}/${project.name}:${project.version}"
 }
 
 bootJar {
     classifier = 'boot'
     mainClass = 'me.julb.Application'
-    layered()
 }
