@@ -1,7 +1,7 @@
 plugins {
 	id 'java-library-distribution'
 	id 'io.freefair.lombok'
-    id 'me.julb.gradleplugins.java11'
+    id 'me.julb.gradleplugins.java17'
 	id 'me.julb.gradleplugins.additionaljars'
     id 'org.springframework.boot'
 }
@@ -16,13 +16,11 @@ dependencies {
 	testImplementation project(':spring-boot-starters:spring-boot-starter-test')
 }
 
-lombok {
-    config['lombok.log.fieldName'] = 'LOGGER'
-}
+
 
 test {
     useJUnitPlatform()
-    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
+    jvmArgs = ["-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
 }
 
 springBoot {
@@ -36,7 +34,6 @@ bootBuildImage {
 bootJar {
     classifier = 'boot'
     mainClass = 'me.julb.Application'
-    layered()
 }
 
 publishing {
